--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,8 +3,8 @@
 {% block content %}
       <section class="jumbotron text-center">
         <div class="container">
-          <h1 class="jumbotron-heading">www.insidecode.me</h1>
-          <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don't simply skip over it entirely.</p>
+          <h1 class="jumbotron-heading">www.InsideCode.me</h1>
+	  <blockquote class="blockquote"><em>A picture is worth a thousand words.</em></blockquote>
         </div>
       </section>
 
@@ -15,17 +15,11 @@
           <div class="row">
             {% for post in posts %}  
                 <div class="col-md-4">
-                  <div class="card mb-4 box-shadow">
+                  <div class="card text-white bg-info mb-4">
                     <a href="{{ url_for('main.post', id=post.id, header=post.header) }}">
-                    <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail" alt="Card image cap">
-                    <div class="card-body">
-                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                      <div class="d-flex justify-content-between align-items-center">
-                        <div class="btn-group">
-                          <button type="button" class="btn btn-sm btn-outline-secondary">View </button>
-                        </div>
-                      </div>
-                    </div>
+		    <div class="card-body">
+		         <h5 class="card-title text-white text-center">{{ post.header }}</h5>
+		    </div>
                   </div>
                 </div>
             {% endfor %}
@@ -33,11 +27,4 @@
         </div>
       </div>
 
-
-      <div class="text-center" style="width: 18rem;">
-          <nav class="blog-pagination">
-            <a class="btn btn-outline-primary" href="#">Older</a>
-            <a class="btn btn-outline-primary" href="#">Newer</a>
-          </nav>
-      </div>
 {% endblock %}
