--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -4,17 +4,13 @@
     <main role="main" class="container">
       <div class="row">
         <div class="col-md-8 blog-main">
-          <h3 class="pb-3 mb-4 font-italic border-bottom">
-           Inside Code
-          </h3>
 
           <div class="blog-post">
               <h2 class="blog-post-title">{{ post.header }}</h2>
-              <p class="blog-post-meta">{{ post.post_date_in_isoformat() }}</p>
-
+              <hr>
+              <img id="postImg" src="{{ post.url }}" class="img-fluid" alt="Responsive image">
+              <hr>
               <p>{{ post.description }}</p>
-            <hr>
-            <img src="{{ post.url }}" class="img-fluid" alt="Responsive image">
           </div><!-- /.blog-post -->
 
           <div class="text-center" style="width: 18rem;">
@@ -29,15 +25,15 @@
 
         <aside class="col-md-4 blog-sidebar">
           <div class="p-3 mb-3 bg-light rounded">
-            <h4 class="font-italic">About</h4>
-            <p class="mb-0">Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
+            <h4 class="font-italic">About InsideCode</h4>
+            <p class="mb-0"><em>www.InsideCode.me</em> contains commonly used IT tech tools, algos, protocols internals in pictorial form.</p>
           </div>
 
           <div class="p-3">
             <h4 class="font-italic">Elsewhere</h4>
             <ol class="list-unstyled">
-              <li><a href="#">GitHub</a></li>
-              <li><a href="#">Twitter</a></li>
+              <li><a href="https://github.com/deepakpjose">GitHub</a></li>
+              <li><a href="https://twitter.com/deepakpjose">Twitter</a></li>
             </ol>
           </div>
         </aside><!-- /.blog-sidebar -->
