--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,7 +4,7 @@
       <section class="jumbotron text-center">
         <div class="container">
           <h1 class="jumbotron-heading">www.InsideCode.me</h1>
-	  <blockquote class="blockquote"><em>A picture is worth a thousand words.</em></blockquote>
+	  <blockquote class="blockquote"><em>One look is worth a thousand words.</em></blockquote>
         </div>
       </section>
 
