--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <main role="main" class="container">
+    <main role="main">
       <div class="row">
         <div class="col-md-8 blog-main">
 
