--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -11,6 +11,7 @@
               <img id="postImg" src="{{ post.url }}" class="img-fluid" alt="Responsive image">
               <hr>
               <p>{{ post.description }}</p>
+              <p>{{ post.body }}</p>
           </div><!-- /.blog-post -->
 
           <div class="text-center" style="width: 18rem;">
@@ -30,7 +31,7 @@
         <aside class="col-md-4 blog-sidebar">
           <div class="p-3 mb-3 bg-light rounded">
             <h4 class="font-italic">About InsideCode</h4>
-            <p class="mb-0"><em>www.InsideCode.me</em> contains commonly used IT tech tools, algos, protocols internals in pictorial form.</p>
+            <p class="mb-0"><em>www.InsideCode.me</em> displays about computer internals.</p>
           </div>
 
           <div class="p-3">
