--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,13 +12,13 @@
 </head>
 <body>
     <div class="container">
-        <nav class="navbar navbar-expand-lg navbar-light mb-4 bg-info">
+        <nav class="navbar navbar-expand-lg navbar-light mb-4 bg-primary text-light">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav navbar-center navbar-brand mr-auto">
+                <ul class="navbar-nav navbar-center navbar-brand mr-auto text-light">
                     {{ render_nav_item('main.index', 'Inside Code', use_li=True) }}
                 </ul>
             </div>
@@ -33,6 +33,8 @@
         {% block footer %}
             <p> &copy; 2021–<script>document.write(new Date().getFullYear())</script> <a href="http://insidecode.me" title="Written by
                 Deepak P Jose">www.insidecode.me</a>
+                <a href="https://github.com/deepakpjose">GitHub</a>
+                <a href="https://twitter.com/deepakpjose">Twitter</a>
             </p>
         {% endblock %}
     </footer>
