--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -3,46 +3,29 @@
 {% block content %}
     <main role="main">
       <div class="row">
-        <div class="col-md-8 blog-main">
-
+        <div class="col-md-12 blog-main">
           <div class="blog-post">
               <h2 class="blog-post-title">{{ post.header }}</h2>
               <hr>
-              <img id="postImg" src="{{ post.url }}" class="img-fluid" alt="Responsive image">
+              <img id="postImg" src="{{ post.url }}" class="img-fluid rounded mx-auto d-block" alt="Responsive image">
               <hr>
               <p>{{ post.description }}</p>
-              <p>{{ post.body }}</p>
+              <p>{{ markup }}</p>
           </div><!-- /.blog-post -->
 
-          <div class="text-center" style="width: 18rem;">
-	     <a href="https://twitter.com/intent/tweet?text={{ post.header }}%20{{ url_for('.post', id=post.id, header=post.header, _external=True) }}%20by%20@deepakpjose">
+        <div class="text-center">
+	          <a href="https://twitter.com/intent/tweet?text={{ post.header }}%20{{ url_for('.post', id=post.id, header=post.header, _external=True) }}%20by%20@deepakpjose">
                 <button type="button" class="btn btn-primary">Tweet</button>
             </a>
 
-	    <a href="https://www.linkedin.com/sharing/share-offsite/?url={{ url_for('.post', id=post.id, header=post.header, _external=True) }}">
-                <button type="button" class="btn btn-primary">Share</button>
+	          <a href="https://www.linkedin.com/sharing/share-offsite/?url={{ url_for('.post', id=post.id, header=post.header, _external=True) }}">
+                <button type="button" class="btn btn-primary">LinkedIn</button>
             </a>
           </div>
           <br>
           <br>
           <br>
         </div><!-- /.blog-main -->
-
-        <aside class="col-md-4 blog-sidebar">
-          <div class="p-3 mb-3 bg-light rounded">
-            <h4 class="font-italic">About InsideCode</h4>
-            <p class="mb-0"><em>www.InsideCode.me</em> displays about computer internals.</p>
-          </div>
-
-          <div class="p-3">
-            <h4 class="font-italic">Elsewhere</h4>
-            <ol class="list-unstyled">
-              <li><a href="https://github.com/deepakpjose">GitHub</a></li>
-              <li><a href="https://twitter.com/deepakpjose">Twitter</a></li>
-            </ol>
-          </div>
-        </aside><!-- /.blog-sidebar -->
-
       </div><!-- /.row -->
 
     </main><!-- /.container -->
