--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -6,23 +6,42 @@
         <div class="col-md-12 blog-main">
           <div class="blog-post">
               <h2 class="blog-post-title">{{ post.header }}</h2>
-              <hr>
-              <img id="postImg" src="{{ post.url }}" class="img-fluid rounded mx-auto d-block" alt="Responsive image">
-              <hr>
-              <p>{{ post.description }}</p>
+			  <button type="button" class="btn btn-light">{{ post.post_date_in_isoformat() }}</button>
+				  <hr>
+					  <!--div-->
+					  <div class="text-center">
+						   <figure class="figure">
+							   <img id="postImg" src="{{ post.url }}" class="figure-img img-fluid rounded mx-auto d-block" alt="Responsive image">
+							   <figcaption class="figure-caption">{{ post.description }}</figcaption>
+						   </figure>
+					  </div>
+					  <!--div-->
+				  <hr>
               <p>{{ markup }}</p>
           </div><!-- /.blog-post -->
 
-        <div class="text-center">
+          <div class="text-center">
 	          <a href="https://twitter.com/intent/tweet?text={{ post.header }}%20{{ url_for('.post', id=post.id, header=post.header, _external=True) }}%20by%20@deepakpjose">
                 <button type="button" class="btn btn-primary">Tweet</button>
             </a>
 
-	          <a href="https://www.linkedin.com/sharing/share-offsite/?url={{ url_for('.post', id=post.id, header=post.header, _external=True) }}">
-                <button type="button" class="btn btn-primary">LinkedIn</button>
-            </a>
           </div>
           <br>
+          <script src="https://giscus.app/client.js"
+            data-repo="deepakpjose/giscus_tactification"
+            data-repo-id="R_kgDOMAyhDw"
+            data-category="tactification post comments"
+            data-category-id="DIC_kwDOMAyhD84Cfnoe"
+            data-mapping="pathname"
+            data-strict="0"
+            data-reactions-enabled="1"
+            data-emit-metadata="0"
+            data-input-position="top"
+            data-theme="preferred_color_scheme"
+            data-lang="en"
+            crossorigin="anonymous"
+            async>
+          </script>
           <br>
           <br>
         </div><!-- /.blog-main -->
